--- a/Dashboard_ADM/frontend/criar-colaborador.html
+++ b/Dashboard_ADM/frontend/criar-colaborador.html
@@ -1,44 +1,61 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Criar Colaborador</title>
+<link rel="stylesheet" href="criar-colaborador.css">
 </head>
+
 <body>
 
-  <div id="criar-colaborador" class="tab-content">
-    <h2>Criar Colaborador</h2>
-    <form id="form-colaborador" enctype="multipart/form-data">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
+  <div class="bodi">
+    <div class="conten">
+      <div class="registration-container">
+        <div class="registration-header">
+          <h2>Criar Colaborador</h2>
+          <span class="divider"></span>
+        </div>
+        <div class="registration-body">
+          <form action="">
+            <div class="registration-box">
+              <div class="input-box">
+                <label>Primeiro Nome</label>
+                <input type="text" class="input-field" placeholder="Primeiro Nome do Colaborador">
+              </div>
+              <div class="input-box">
+                <label>Último Nome</label>
+                <input type="text" class="input-field" placeholder="Último Nome do Colaborador">
+              </div>
+              <div class="input-box">
+                <label>Número de Contato</label>
+                <input type="tel" class="input-field" placeholder="Número de contato do Colaborador">
+              </div>
+              <div class="input-box">
+                <label>E-mail</label>
+                <input type="email" class="input-field" placeholder="E-mail do Colaborador">
+              </div>
+              <div class="input-box">
+                <label>Nome de Usuário</label>
+                <input type="text" class="input-field" placeholder="Nome de usuário do Colaborador">
+              </div>
+              <div class="input-box">
+                <label>Senha</label>
+                <input type="password" class="input-field" placeholder="Senha do Colaborador">
+              </div>
+            </div>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+            <!-- Texto Foto e campo de upload com borda pontilhada -->
+            <div class="profile-picture-container">
+              <label for="profile-picture" class="photo-label">Foto</label>
+              <div class="photo-upload-box">
+                <input type="file" id="profile-picture" accept="image/*">
+                <span id="file-name">Nenhum arquivo escolhido</span>
+              </div>
+            </div>
 
-      <label for="telefone">Telefone:</label>
-      <input type="text" id="telefone" name="telefone" required>
-
-      <label for="turma">Turma:</label>
-      <input type="text" id="turma" name="turma" required>
-
-      <label for="sala">Sala:</label>
-      <input type="text" id="sala" name="sala" required>
-
-      <label for="data">Data:</label>
-      <input type="date" id="data" name="data" required>
-
-      <label for="horario">Horário:</label>
-      <input type="time" id="horario" name="horario" required>
-
-      <label for="foto">Foto:</label>
-      <input type="file" id="foto" name="foto" accept="image/*">
-
-      <button type="submit">Cadastrar</button>
-    </form>
+            <button class="btn-register">Registrar Agora</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <!-- Referência para o arquivo JavaScript externo -->
+  <!-- Referência para o JavaScript -->
   <script src="script.js"></script>
 
 </body>
